--- a/android/build.gradle
+++ b/android/build.gradle
@@ -57,8 +57,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-core:5.0.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-//    implementation files('libs/IminLibs1.0.15.jar')
-    implementation files('libs/IminStraElectronicSDK_V1.2.jar')
+    implementation files('libs/IminLibs1.0.20.jar')
+    implementation files('libs/NeoStraElectronicSDK-3-v1.3_2302281129.jar')
     implementation "androidx.multidex:multidex:2.0.1"
     implementation 'com.github.iminsoftware:IminPrinterLibrary:V1.0.0.13'
     implementation 'com.github.bumptech.glide:glide:4.16.0'
